--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "nadermohammad9@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.6"
+    }
 }
